<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Tribune Zamaneh</string>
  <string name="app_description">Tribune Zamaneh is a secure news reader and reporter app featuring group conversations around news.</string>
  <string name="title_activity_comments">Comments</string>
  <string name="story_list_hint_no_shared_text1">The stories shared with you using Tribune Zamaneh Nearby are listed here.</string>
  <string name="help_title">About Tribune Zamaneh</string>
  <string name="help_tor_title">Go Online with Tor</string>
  <string name="help_tor_content">Tor is an open network that helps keep you safe online. It defends against network surveillance that threatens your personal freedom and privacy. You will use the Orbot app to connect to the Tor network.</string>
  <string name="help_wipe_content">Tap the panic button to delete your personal data within Tribune Zamaneh. You can set the panic action to delete the entire app in your settings.</string>
  <string name="help_share_content">Share stories, feeds and the entire app using Tribune Zamaneh Nearby. It\'s safe, easy and only requires a friend nearby with Bluetooth. App sharing requires a WiFi network or hotspot.</string>
  <string name="help_chat_title">Talk About the News</string>
  <string name="help_chat_content">Chat with the Tribune Zamaneh community using Tribune Zamaneh Talk.</string>
  <string name="help_data_content">Tips to reduce your data consumption:\n\n1. Sync only the feeds that matter to you most. Tribune Zamaneh allows you to sync individual feeds.\n\n2. Choose Bit Wise syncing mode in your settings. This syncs only text, with the ability to load photos on a story by story basis.\n\n3. Expire your articles in a timely manner. Choose your time frame in your settings.</string>
  <string name="help_terms_title">Terms and Software Licenses</string>
  <string name="help_terms_content">User-Submitted Materials\n\nBBG Websites may allow users to post, upload, transmit, or otherwise submit comments, messages, photos, images, story ideas, or other content or materials (collectively “User-Submitted Materials). You acknowledge that User-Submitted Materials may be routed through our servers, the servers of one or more third parties on our behalf, and the Internet. You acknowledge that BBG Websites are for public and not private communications.\n\nYou may only submit materials to BBG Websites for which you have the copyright or other necessary rights and permission to distribute electronically. You may not violate, plagiarize, or infringe on the rights of third parties, including copyright, patent, trademark, trade secret, privacy, personal, publicity, moral or proprietary rights. You agree and represent that you own or have all necessary rights and permissions to use, distribute, and authorize BBG to use and distribute any materials you submit.\n\nYou retain any copyright or other ownership rights you possess in any User-Submitted Materials that you submit on or through BBG Websites. However, by submitting any User-Submitted Materials on or through BBG Websites, you hereby grant BBG a non-exclusive, perpetual, royalty-free, fully paid up, worldwide, transferable license to use, copy, sublicense, modify, transmit, publicly perform, display, create derivative works of, host, index, cache, tag, encode, and/or adapt your User-Submitted Materials in any and all media formats or channels, whether now known or hereafter devised.\n\nAdditional user-submitted material Rules Specific to Posting Comments\n\nBBG will make every effort to review and post comments within 48 hours, although BBG is under no obligation to post comments within any deadline or to post the comments at all. BBG encourages thoughtful discussion and will not censor comments based on ideology or political points of view. BBG will not edit comments - we will either post them or refuse to post them. All comments must follow these rules:\n\n- Stay on topic.\n- No obscenity, profanity, vulgarity, hate language, SHOUTING, or other bad behavior.\n- No personal attacks. No inflammatory language or calls for violence.\n- No advocating or providing instruction on how to conduct any illegal activity\n- No advertising, promotional materials, "junk mail," "spam," "chain letters," "pyramid schemes," or any other form of solicitation\n- Simple text only, no html or other code.</string>
  <string name="story_comment_add_hint">Write something&#8230;</string>
  <string name="menu_chat">Tribune Zamaneh Talk</string>
  <string name="menu_help">About</string>
  <string name="onboarding_welcome_title">Welcome</string>
  <string name="onboarding_welcome_text">to Tribune Zamaneh</string>
  <string name="change_passphrase_not_matching">Passwords do not match, please try again</string>
  <string name="post_sign_in_title">Share the news that’s happening around you</string>
  <string name="post_sign_in_info">Tribune Zamaneh provides a feed of noteworthy news to its community. Every post created with Tribune Zamaneh will undergo a curation process before it is shared in the official Tribune Zamaneh news feed. Please see the Terms &amp; Conditions ("About Tribune Zamaneh" then "Terms &amp; Software Licenses) to understand the rights you grant when you share information with Tribune Zamaneh.</string>
  <string name="httpd_app_sender_instructions">To share the Tribune Zamaneh app or the apps supported by it (Orbot and ChatSecure) with people nearby, please take the following steps:</string>
  <string name="bluetooth_send_info">Your friend must have the Tribune Zamaneh app open to the \'Receive a Share\' screen from the side menu.</string>
  <string name="bluetooth_receive_title">Receive a story from a friend using Tribune Zamaneh Nearby.</string>
  <string name="create_account_title">Create your Tribune Zamaneh Nickname</string>
  <string name="feed_filter_all_feeds">News feed</string>

  <string name="settings_proxy_none">No proxy</string>
  <string name="settings_security_password_attempts_1">3</string>
  <string name="settings_security_password_attempts_2">5</string>

    <string name="add_post_draft_delete">Yes, delete</string>
    <string name="add_post_draft_delete_empty">Your post is empty. Would you like to delete it?</string>
    <string name="add_post_draft_save">No, save</string>
    <string name="add_post_draft_saved">Post saved to drafts.</string>
    <string name="add_post_headline_hint">Headline</string>
    <string name="add_post_headline_label">Describe what\'s happening in the photo above. Include important details about the location and subject, but remember to respect others\' privacy.</string>
    <string name="add_post_media_chooser_photo">Photo</string>
    <string name="add_post_media_chooser_title">Choose media source:</string>
    <string name="add_post_media_chooser_video">Video</string>
    <string name="add_post_menu_post">POST</string>
    <string name="add_post_not_valid_data_warning_content">You need to specify at least a photo and a title!</string>
    <string name="add_post_not_valid_data_warning_title">Post</string>
    <string name="add_post_operation_add_more">Add more</string>
    <string name="add_post_operation_delete">Delete</string>
    <string name="add_post_operation_replace">Replace</string>
    <string name="add_post_operation_view">View</string>
    <string name="add_post_tag_hint">#tags</string>
    <string name="create_account_create">Create</string>
    <string name="create_account_hint">Nickname</string>
    <string name="create_account_info">Your nickname will be used in group conversations and will be displayed with the reports you publish.</string>
    <string name="menu_add_post">Add post</string>
    <string name="menu_post">My Posts</string>
    <string name="menu_post_new">Create a Post</string>
    <string name="post_draft_saved_day">Saved %1$d day ago</string>
    <string name="post_draft_saved_days">Saved %1$d days ago</string>
    <string name="post_draft_saved_hour">Saved %1$d hour ago</string>
    <string name="post_draft_saved_hours">Saved %1$d hours ago</string>
    <string name="post_draft_saved_minute">Saved %1$d minute ago</string>
    <string name="post_draft_saved_minutes">Saved %1$d minutes ago</string>
    <string name="post_draft_saved_never">Never saved</string>
    <string name="post_draft_saved_recently">Saved less than a minute ago</string>
    <string name="post_item_no_title">Untitled</string>
    <string name="post_no_drafts">No drafts</string>
    <string name="post_no_outgoing">No outgoing posts</string>
    <string name="wp_sign_out">Logout</string>
    <string name="wp_sign_in_title">Log In</string>
    <string name="wp_sign_in_info">In order to continue you need to login to your account</string>
    <string name="wp_sign_in_register_title">Register</string>
    <string name="wp_sign_in_register_info">Register an account in order to continue. Registration confirmation will be emailed to you.</string>
    <string name="wp_sign_in">Log In</string>
    <string name="wp_sign_in_register">Register</string>
    <string name="wp_sign_in_username">Username</string>
    <string name="wp_sign_in_email">Email</string>
    <string name="wp_sign_in_password">Password</string>
    <string name="wp_sign_in_progress">Logging in&#8230;</string>
    <string name="wp_sign_in_register_progress">Creating account&#8230;</string>
    <string name="wp_sign_in_register_done">Account created. You will receive an email from where you can set your password.</string>
    <string name="wp_sign_in_error_other">Failed to contact server. Please make sure you have Internet connectivity!</string>
    <string name="wp_sign_in_error_credentials">Wrong username or password, please try again!</string>
    <string name="wp_sign_in_error_register">Username or email already registered, please choose another one.</string>
    <string name="wp_sign_in_goto_register">No account? Register here.</string>
    <string name="wp_sign_in_goto_login">Already have an account? Login here.</string>
    <string name="post_sign_in_agree">I give my permission to use my content</string>
    <string name="post_sign_in_done">Done</string>
    <string name="post_title_drafts">Drafts</string>
    <string name="post_title_outgoing">Outgoing</string>
    <string name="post_title_published">Published</string>
    <string name="title_activity_post">My Posts</string>
    <string name="comment_error_proxy">Commenting Failed, Proxy Required for Commenting</string>
    <string name="comment_error_network">Commenting Failed, No Network Connection</string>
    <string name="comment_error_unknown">Commenting Failed, Failure Unknown</string>
</resources>
